--- a/app/globals.css
+++ b/app/globals.css
@@ -29,15 +29,15 @@ body {
 
 ::-webkit-scrollbar{
   background-color: green;
-  width: 8px;
-  border-radius: 10px;
+  width: 10px;
+  border-radius: 20px;
   scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar-track{
-  background-color: blueviolet;
+  background-color: gray;
   width: 10px;
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 ::-webkit-scrollbar-thumb{
